Song Controller, Swagger Updates, Database logs
